Fix drag and drop alignment - https://www.screencast.com/t/FqxZkac9L.

--- a/styles.css
+++ b/styles.css
@@ -140,15 +140,15 @@ ul.ned.sectioncontentjustification .section .activity .actions {
 }
 
 /* Activity completion background */
-.course-content ul.ned li.section .activity.completion-background {
+.course-content ul.ned.ned-static li.section .activity.completion-background {
     padding: .4em;
 }
 
-.course-content ul.ned li.section .activity.completion-background .mod-indent-outer {
+.course-content ul.ned.ned-static li.section .activity.completion-background .mod-indent-outer {
     width: calc(100% - 34px);
 }
 
-.course-content ul.ned li.section .activity.completion-background .activityinstance {
+.course-content ul.ned.ned-static li.section .activity.completion-background .activityinstance {
     margin: 0;
     padding: 5px 15px 1px 10px;
 }
@@ -193,7 +193,7 @@ ul.ned.sectioncontentjustification .section .activity .actions {
     border: 1px solid #F9E2E3;
 }
 
-.course-content ul.ned li.section .activity.completion-background .actions {
+.course-content ul.ned.ned-static li.section .activity.completion-background .actions {
     top: 7px;
 }
 
